Sat Feb 21 22:53:47 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.cpp:

          . Added the source name to the generated log messages.

Fri Feb 20 07:04:38 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Generators.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Workspace_Generators.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Event_Impl_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Event_Impl_Generator.h:

          . Improved upon the emulation model such that concrete events
            are auto-generated by the tool, and subclassed from the
            JbiEvent. This removes the need for having to auto-generate
            a lot of redundant management code.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/BE_CIAO.mpc:

          . Subclassed this project from the cuts_be.mpb base project.

        * cuts/java/CUTS/jbi/client/JbiEvent.java:
        * cuts/java/CUTS/jbi/client/JbiPort.java:
        * cuts/java/CUTS/jbi/client/JbiSink.java:
        * cuts/java/CUTS/jbi/client/JbiSource.java:

          . Subclassed the JbiSink and JbiSource from the JbiPort class.

          . Moved the code for serializing/deserializing an event to/from
            XML to subclasses of the JbiEvent.

        * MPC/config/cuts_be.mpb

          . Fix bugs in the project specification.

Tue Feb 17 00:33:49 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/birthtest/run-test.sh:

           . Changed the configuration since template support hasn't been
            added to all parts of the test configuration file.

Tue Feb 17 00:28:49 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
